# customer-behavior-analysis

./: .gitignore  Dockerfile.dockerfile  README.md  api.py  dashboard.py  docker-compose.yml  main.py  main_analysis.ipynb  pyproject.toml  requirements.txt
data/processed/: processed_customers.csv  processed_transactions.csv  retail_analysis.db
data/raw/: customers.csv  transactions.csv
notebooks/: main_analysis.ipynb
src/: advanced_visualization.py  data_acquisition.py  data_processing.py  ml_models.py  optimization.py  visualization.py
test/: test_data_processing.py
